Paperによるよりモダンなイベントを採用